# OBStools

./: .buildinfo  .gitignore  .travis.yml  README.md  atacr.html  comply.html  genindex.html  index.html  links.html  meson.build  objects.inv  obstools.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  tutorial.html
.github/workflows/: deploy.yml
.travis/: github_deploy_key.enc
Scripts/: atacr_clean_spectra.py  atacr_correct_event.py  atacr_daily_spectra.py  atacr_download_data.py  atacr_download_event.py  atacr_transfer_functions.py  comply_calculate.py  obs_clean_spectra.py  obs_correct_event.py  obs_daily_spectra.py  obs_download_data.py  obs_download_event.py  obs_prep.py  obs_transfer_functions.py  orient_get_azcorr.py  station_obs.py
_modules/: index.html
_modules/obstools/atacr/: classes.html  plotting.html  utils.html
_modules/obstools/comply/: classes.html
_sources/: atacr.rst.txt  comply.rst.txt  index.rst.txt  links.rst.txt  tutorial.rst.txt
docs/: atacr.rst  classes.rst  comply.rst  conf.py  index.rst  obstools.rst
docs/_build/doctrees/: api.doctree  classes.doctree  environment.pickle  index.doctree  links.doctree
docs/_build/html/: .buildinfo  api.html  classes.html  genindex.html  index.html  links.html  objects.inv  py-modindex.html  search.html  (+1 more)
obstools/: QC.py  __init__.py  classes.py  options.py  plot.py  proc.py  utils.py
obstools/atacr/: __init__.py  arguments.py  classes.py  options.py  plot.py  plotting.py  utils.py
obstools/comply/: __init__.py  classes.py
obstools/obsqa/: Janiszewski_etal_2023_StationList.xlsx  __init__.py  classes.py  comp_tools.py  glt.py  imports.py  io.py  metrics.py  noisecut.py  plo.py  plots.py  qa.py  utils.py
obstools/orient/: __init__.py  classes.py  options.py  rf_orient.py
obstools/scripts/: atacr_clean_spectra.py  atacr_correct_event.py  atacr_daily_spectra.py  atacr_download_data.py  atacr_download_event.py  atacr_transfer_functions.py  comply_calculate.py
obstools/tests/: get_meta.py  test_0_imports.py  test_1_args.py  test_2_a_scripts_noH.py  test_2_b_scripts_noP.py  test_2_c_scripts_all.py  test_2_scripts.py  test_3_utils.py  test_4_classes.py  test_args.py  test_classes.py  test_imports.py  test_scripts.py  test_utils.py
tests/: test_0_imports.py
(+44 files in other folders)
