[build-system]
build-backend = "mesonpy"
requires = ["meson-python>0.15.0", "numpy >= 1.25.0"]


[project]
name = "obstools"
version = "0.2.1"
description = "Python tools for ocean bottom seismic instruments"
authors = [
    { name = "Pascal Audet", email = "pascal.audet@uottawa.ca" }
]
maintainers = [
    { name = "Pascal Audet", email = "pascal.audet@uottawa.ca" }
]
requires-python = ">=3.9"
readme = "README.md"
dependencies = ["numpy>=1.25", "obspy"]
classifiers = [
    "Development Status :: 5 - Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Homepage = "https://github.com/nfsi-canada/OBStools"
Documentation = "https://nfsi-canada.github.io/OBStools"
"Bug Tracker" = "https://github.com/nfsi-canada/OBStools/issues"

[project.scripts]
atacr_download_data = "obstools.scripts.atacr_download_data:main"
atacr_download_event = "obstools.scripts.atacr_download_event:main"
atacr_daily_spectra = "obstools.scripts.atacr_daily_spectra:main"
atacr_clean_spectra = "obstools.scripts.atacr_clean_spectra:main"
atacr_transfer_functions = "obstools.scripts.atacr_transfer_functions:main"
atacr_correct_event = "obstools.scripts.atacr_correct_event:main"
comply_calculate = "obstools.scripts.comply_calculate:main"
